--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,11 +4,14 @@
 h1 {
   margin-bottom: 30px;
 }
-tr {
+td {
   vertical-align: middle;
 }
 th {
-  align-content: center;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 1.2em;
+  color: red;
 }
 input[type="text"] {
   width: 200px;
